--- a/index.html
+++ b/index.html
@@ -14,59 +14,10 @@
 
 
     <!--  =======================  GAME CORE FILES  ========================  -->
-    <script src="References/AreaSpawnr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/AudioPlayr-0.2.1.js" type="text/javascript"></script>
-    <script src="References/ChangeLinr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/DeviceLayr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/EightBittr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/FPSAnalyzr-0.2.1.js" type="text/javascript"></script>
-    <script src="References/GamesRunnr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/GameStartr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/GroupHoldr-0.2.1.js" type="text/javascript"></script>
-    <script src="References/InputWritr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/ItemsHoldr-0.2.1.js" type="text/javascript"></script>
-    <script src="References/LevelEditr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/MapsCreatr-0.2.1.js" type="text/javascript"></script>
-    <script src="References/MapScreenr-0.2.1.js" type="text/javascript"></script>
-    <script src="References/MathDecidr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/ModAttachr-0.2.2.js" type="text/javascript"></script>
-    <script src="References/NumberMakr-0.2.2.js" type="text/javascript"></script>
-    <script src="References/ObjectMakr-0.2.2.js" type="text/javascript"></script>
-    <script src="References/PixelDrawr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/PixelRendr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/QuadsKeepr-0.2.1.js" type="text/javascript"></script>
-    <script src="References/ScenePlayr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/StringFilr-0.2.1.js" type="text/javascript"></script>
-    <script src="References/ThingHittr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/TimeHandlr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/TouchPassr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/UsageHelpr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/UserWrappr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/WorldSeedr-0.2.0.js" type="text/javascript"></script>
-    <script src="References/js_beautify.js" type="text/javascript"></script>
+    <script src="References/references.js" type="text/javascript"></script>
     <script src="PlayMarioJas.js" type="text/javascript"></script>
-    <script src="settings/audio.js" type="text/javascript"></script>
-    <script src="settings/collisions.js" type="text/javascript"></script>
-    <script src="settings/devices.js" type="text/javascript"></script>
-    <script src="settings/editor.js" type="text/javascript"></script>
-    <script src="settings/generator.js" type="text/javascript"></script>
-    <script src="settings/groups.js" type="text/javascript"></script>
-    <script src="settings/events.js" type="text/javascript"></script>
-    <script src="settings/help.js" type="text/javascript"></script>
-    <script src="settings/input.js" type="text/javascript"></script>
-    <script src="settings/items.js" type="text/javascript"></script>
-    <script src="settings/maps.js" type="text/javascript"></script>
+    <script src="settings/settings.js" type="text/javascript"></script>
     <script src="settings/maps/1-1.js" type="text/javascript"></script>
-    <script src="settings/math.js" type="text/javascript"></script>
-    <script src="settings/objects.js" type="text/javascript"></script>
-    <script src="settings/quadrants.js" type="text/javascript"></script>
-    <script src="settings/renderer.js" type="text/javascript"></script>
-    <script src="settings/runner.js" type="text/javascript"></script>
-    <script src="settings/scenes.js" type="text/javascript"></script>
-    <script src="settings/sprites.js" type="text/javascript"></script>
-    <script src="settings/touch.js" type="text/javascript"></script>
-    <script src="settings/ui.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript"></script>
-    <script src="assets/modal.js" type="text/javascript"></script>
 </body>
 </html>
